deploy/k8s/base/mailhog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: hanko
spec:
  ports:
    - port: 8080
      name: mailhog-ui
      targetPort: mailhog-ui
    - port: 8085
      name: service-port
      targetPort: service-port
    - port: 2500
      name: smtp
      targetPort: smtp
  selector:
    app: mailhog
