deploy/k8s/base/mailhog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hanko-tenant
  name: mailhog
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    fqdn: mail.quickstart.test
spec:
  tls:
    - hosts:
        - $(MAILHOG_FQDN)
      secretName: mail-tls
  rules:
    - host: $(MAILHOG_FQDN)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  name: mailhog-ui
